[package]
name = "bean_cypher"
version = "0.5.0"
edition = "2021"

[dependencies]
configparser = "3.1.0"
# color-eyre = "0.6.3"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.14.1"
serde = "1.0.204"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "deny" }
unwrap_used = "deny"